--- a/tgw3d/Project.toml
+++ b/tgw3d/Project.toml
@@ -2,3 +2,6 @@ name = "tgw3d"
 uuid = "4aa1eda0-706d-4d29-9e8e-0787c7501fa2"
 authors = ["Daria Occhioni <dariuccrulez@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
