--- a/tgw3d/Project.toml
+++ b/tgw3d/Project.toml
@@ -5,3 +5,5 @@ version = "0.1.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
